force-app/main/default/objects/leaseworks__Communication__c/fields/leaseworks__ATA__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__ATA__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>ATA</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>leaseworks__Historical_Event_Task__c.leaseworks__Technical_Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.leaseworks__Technical_Project__c</valueField>
        </filterItems>
        <filterItems>
            <field>leaseworks__Historical_Event_Task__c.leaseworks__Workscope__c</field>
            <operation>equals</operation>
            <valueField>$Source.leaseworks__Module__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>leaseworks__Historical_Event_Task__c</referenceTo>
    <relationshipLabel>Communications</relationshipLabel>
    <relationshipName>Communications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>