force-app/main/default/objects/leaseworks__Communication__c/fields/leaseworks__Excusable_Delay_Reason__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Excusable_Delay_Reason__c</fullName>
    <label>Excusable Delay Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>