force-app/main/default/objects/leaseworks__Communication__c/fields/leaseworks__Proposed_Resolution__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Proposed_Resolution__c</fullName>
    <label>Proposed Resolution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>