force-app/main/default/objects/leaseworks__Communication__c/fields/leaseworks__Technical_Project__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Technical_Project__c</fullName>
    <label>Technical Project</label>
    <referenceTo>leaseworks__Technical_Project__c</referenceTo>
    <relationshipLabel>Communications</relationshipLabel>
    <relationshipName>Communications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>